<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.thehood.PostActivity$PlaceholderFragment"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/post_map"
        android:layout_width="match_parent"
        android:layout_height="221dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/from"
                android:id="@+id/post_textview_from" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_date"
                android:id="@+id/pick_start_date_button" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_time"
                android:id="@+id/pick_start_time_button"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/to"
                android:id="@+id/post_textview_to" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_date"
                android:id="@+id/pick_end_date_button" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_time"
                android:id="@+id/pick_end_time_button"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
