<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.thehood.PostViews.PostEventActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/post_map"
        android:layout_width="match_parent"
        android:layout_height="221dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title"
                android:id="@+id/title_textview" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_input_field"
                android:maxLength="50"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/from"
                android:id="@+id/post_textview_from" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_date"
                android:id="@+id/pick_start_date_button"
                android:editable="false"
                android:clickable="false"
                android:textIsSelectable="false"
                android:focusableInTouchMode="false"
                android:enabled="true"
                android:textColor="#eca23b" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_time"
                android:id="@+id/pick_start_time_button"
                android:editable="false"
                android:clickable="false"
                android:textIsSelectable="false"
                android:focusableInTouchMode="false"
                android:textColor="#eca23b" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/to"
                android:id="@+id/post_textview_to" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_date"
                android:id="@+id/pick_end_date_button"
                android:editable="false"
                android:clickable="false"
                android:textIsSelectable="false"
                android:focusableInTouchMode="false"
                android:textColor="#eca23b" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_time"
                android:id="@+id/pick_end_time_button"
                android:editable="false"
                android:clickable="false"
                android:textIsSelectable="false"
                android:focusableInTouchMode="false"
                android:textColor="#eca23b" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/description"
                android:id="@+id/description_textview" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:id="@+id/description_input_field"
                android:layout_weight="0.27"
                android:scrollHorizontally="false"
                android:imeOptions="actionDone"
                android:maxLength="200"
                android:height="100dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_event"
            android:id="@+id/create_event_button"
            android:layout_gravity="bottom"
            android:background="#eca23b" />
    </LinearLayout>


</LinearLayout>
